** Release Notes

current
  * modified %RNDM replacement to allow usage of % as terminator
  * removed 64/32 support in --athenaTag (only --cmtConfig is recommended)

0.5.5 (6/5/2014)
  * ignoring pound symbols in --pfnListignoring pound symbols in --pfnList
  * added a protection against junk message given by voms-proxy-info
  * fixed prun to accept CVMFS ROOT version format

0.5.4
  * fixed --mergeScript

0.5.3
  * fixed --spaceToken
  * fixed --workingGroup
  * fixed json error for SL5
  * fixed RNDM in --exec of prun 
  * added --nEvents and --nEventsPerChunk to prun

0.5.2
  * fixed for transHome=None

0.5.1
  * fixed for --bexec and --destSE

0.5.0
  * the first version with JEDI

0.4.33 (12/13/2013)
  * fixed for new pyAMI

0.4.32 (11/12/2013)
  * setting client_version
  * fixed getCmtConfig to check with installedSW	
  * set --useNewTRF by default in pathena

0.4.31 (9/19/2013)
  * fixed threading in pbook

0.4.30 (9/2/2013)
  * fixed cmtShowProjects to ignore CMTUSERCONTEXT

0.4.29 (8/7/2013)
  * fixed getLatestDBRelease for the change of DBR replication policy

0.4.28 (7/30/2013)
  * fixed pathena to respect --nFilesPerJob when --nEventsPerJob

0.4.27 (7/18/2013)
  * fixed voms-proxy-info check for PATHENA_GRID_SETUP_SH setting

0.4.26 (7/5/2013)
  * added support for ROOT/x86_64-slc6-gcc47-opt	
  * fixed datriHandler for SLC6
 
0.4.25 (6/5/2013)
  * fixed for the change to DQ2 CC 

0.4.24 (6/5/2013)
  * fixed grid-cert-info check
     
0.4.23 (6/4/2013)
  * fixed wrong Indetity for proxy generation on SL(C)6
  * fixed wrong message for PATHENA_GRID_SETUP_SH on CERN SLC6
  * fixed --site BNL to send jobs to ANALY_BNL_SHORT
	
0.4.22 (5/13/2013)
  * fixed ownership of libDS for prun with --noCompile
  * fixed --outTarBall of pathena when input sandbox is reused
  * fixed ConfigExtractor for AthenaRootComps

0.4.21 (4/3/2013)
  * added missing attributes to JobSpec

0.4.20 (3/21/2013)
  * improved error message of the brokerage in pathena